<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/ReportDetailLeadingView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_detail_title_dummy"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ReportDetailLeadingView"
        android:inputType="text" />

    <TextView
        android:id="@+id/reportDetailInfoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:text="@string/report_detail_info_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitleHeader" />


    <EditText
        android:id="@+id/editReportDetailInfo"
        android:layout_width="381dp"
        android:layout_height="87dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="15dp"
        android:lines="4"
        android:maxLines="4"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportDetailInfoHeader"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/reportDetailLocationInfoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/report_detail_location_info_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editReportDetailInfo" />


    <EditText
        android:id="@+id/editReportLocInfo"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="15dp"
        android:imeOptions="actionDone"
        android:text="@string/empty"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportDetailLocationInfoHeader" />

    <Button
        android:id="@+id/reportDetailEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="21dp"
        android:text="@string/reportDetailEditButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editReportLocInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>